--- a/styles.css
+++ b/styles.css
@@ -150,3 +150,10 @@ h2 {
 .form-control {
     background-color: white;
 }
+
+.menu-acessibilidade{
+    position: fixed;
+    top: 2rem;
+    right: 20px;
+    z-index: 1000;
+}
